[package]
name = "udp-test"
version = "0.1.0"
authors = ["Andrew Gaspar <andrew.gaspar@outlook.com>"]
edition = "2018"

[workspace]
members = ["chroma", "forza"]

[dependencies]
futures-util = "0.3"
serde_json = "1.0"

[dependencies.chroma]
path = "./chroma"

[dependencies.forza]
path = "./forza"

[dependencies.tokio]
version = "0.2"
features = ["full"]