[package]
name = "forza-chroma"
version = "0.1.0"
authors = ["Andrew Gaspar <andrew.gaspar@outlook.com>"]
edition = "2018"

[workspace]
members = ["chroma", "forza"]

[dependencies]
async-stream = "0.2"
clap = "2.33"
futures = "0.3"
futures-util = "0.3"
lazy_static = "1.4"
rgb = "0.8"
serde = "1.0"
toml = "0.5"

[dependencies.chroma]
path = "./chroma"

[dependencies.forza]
path = "./forza"

[dependencies.tokio]
version = "0.2"
features = ["full"]
